# EPNix

./: .editorconfig  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .vale.ini  NOTICE  README.md  flake.nix  formatter.nix
.github/: dependabot.yml
.github/workflows/: backport.yml  book-gh-pages.yml  build-checks.yml  docs-linkcheck.yml  docs-redirect-check.yml  editorconfig.yml  formatting.yml  update-flake-lock.yml  zizmor.yml
checks/: default.nix
checks/cross/: default.nix
checks/support/StreamDevice/simple/mock-server/: pyproject.toml
doc/: .gitignore  _quarto.yml  index.md
doc/ioc/: developer-guides.md  developer-tutorials.md  explanations.md  faq.md  guides.md  introduction.md  references.md  tutorials.md
doc/nixos/: introduction.md
doc/pkgs/: introduction.md
doc/src/: SUMMARY.md  faq.md  (+3 more)
docs/: .gitignore  Makefile  advantages-disadvantages.md  cheatsheet.md  cheatsheet.rst  conf.py  glossary.md  index.md  index.rst  pre-requisites.md  prerequisites.md  redirects.txt  requirements.txt
ioc/: README.md
ioc/tests/support/StreamDevice/simple/mock-server/: pyproject.toml
ioc/tests/support/StreamDevice/simple/mock-server/mock_server/: __init__.py
lib/: ci.nix  default.nix  documentation.nix  evaluation.nix  formats.nix  licenses.nix  testing.nix  types.nix  versions.nix
modules/: app.nix  assertions.nix  base.nix  boot.nix  build.nix  checks.nix  common.nix  default.nix  devshell.nix  documentation.nix  meta.nix  module-list.nix  nixos-integration.nix  outputs.nix  source.nix
nixos/: README.md  module-list.nix
pkgs/: default.nix
(+579 files in other folders)
