[tool.poetry]
name = "mock-server"
version = "0.1.0"
description = "Mock Server for the simple StreamDevice support test"
authors = ["Rémi NICOLE <remi.nicole@cea.fr>"]

[tool.poetry.scripts]
mock_server = "mock_server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
